@@ -2,6 +2,7 @@
     - Update new ops, new runops loop for Perl 5.12 - 5.16.
     - Do not use PERL_DL_NONLAZY=1
     - Fix wrong t/06pp_aeach.t line 74
+    - Add PERL_ASYNC_CHECK to inlined ops
 
 0.04 - 21 Jan 2008
     - Update for new ops in Perl 5.10.
